--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "typechain": "^8.1.0"
+  },
+  "dependencies": {
+    "mongodb": "^6.2.0"
   }
 }
