--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
-    "mongodb": "^6.2.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1",
+    "vite": "^4.5.0"
   }
 }
