--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.18.0",
+    "react-typed": "^1.2.0",
     "vite": "^4.5.0"
   }
 }
