--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
+    "@fontsource/shadows-into-light": "^5.0.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
