--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.3.5"
   }
 }
