--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/shadows-into-light": "^5.0.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "heroicons": "^2.0.18",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
