--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.23.4",
+    "@material-tailwind/react": "^2.1.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "classnames": "^2.3.2",
     "ethers": "5",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
