--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
+    "@pinata/sdk": "^2.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.3.5"
   }
