--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@openzeppelin/contracts": "^5.0.0",
+    "@pinata/sdk": "^2.1.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.4.0",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.19.0",
     "hardhat-deploy": "^0.11.43",
     "hardhat-gas-reporter": "^1.0.8",
+    "path": "^0.12.7",
     "solidity-coverage": "^0.8.0",
     "typechain": "^8.1.0"
   },
