--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "ethers": "^6.9.0",
     "framer-motion": "^10.16.5",
@@ -46,7 +47,6 @@
   },
   "devDependencies": {
     "@heroicons/react": "^2.0.18",
-    "@pinata/sdk": "^2.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "tailwindcss": "^3.3.5"
   }
