--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
-    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "ethers": "^6.9.0",
     "framer-motion": "^10.16.5",
     "fs": "^0.0.1-security",
