--- a/.gitignore
+++ b/.gitignore
@@ -378,11 +378,6 @@ FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
 
 # Local History for Visual Studio Code
 .history/
@@ -400,4 +395,4 @@ FodyWeavers.xsd
 /cache/
 .env
 /deployments/
-/frontend/src/backend-constants/
+/frontend/src/backend-constants/*
