--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0",
     "web3": "^4.2.2"
