--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "^7.23.4",
     "@dotlottie/dotlottie-js": "^0.6.1",
     "@dotlottie/react-player": "^1.6.5",
+    "@headlessui/react": "^1.7.17",
     "@material-tailwind/react": "^2.1.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
