--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "ethers": "^6.9.0",
     "framer-motion": "^10.16.5",
     "fs": "^0.0.1-security",
+    "history": "^5.3.0",
     "puppeteer": "^21.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
