--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@web3-react/core": "^8.2.3",
     "@web3-react/injected-connector": "^6.0.7",
+    "apexcharts": "^3.46.0",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "crypto-js": "^4.2.0",
@@ -23,6 +24,7 @@
     "history": "^5.3.0",
     "puppeteer": "^21.11.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.0",
