--- a/sqlDb/package.json
+++ b/sqlDb/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "nodemon": "^3.0.3",
     "sqlite3": "^5.1.7"
   }
