--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "apexcharts": "^3.46.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "classnames": "^2.3.2",
     "crypto-js": "^4.2.0",
     "ethers": "^6.9.0",
@@ -25,6 +26,7 @@
     "puppeteer": "^21.11.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.0",
