test template and env config complete

--- a/db/package.json
+++ b/db/package.json
@@ -4,16 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "test": "cross-env NODE_ENV=test mocha --exit",
+    "start": "nodemon",
+    "coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai-http": "^4.4.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "mocha": "^10.3.0",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "nyc": "^15.1.0"
+  },
+  "devDependencies": {
+    "nyv": "^0.0.0"
   }
 }
