--- a/db/package.json
+++ b/db/package.json
@@ -17,11 +17,33 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "mocha": "^10.3.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "nyc": "^15.1.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "mongodb-memory-server": "^9.1.7",
     "nyv": "^0.0.0"
+  },
+  "jest": {
+    "bail": true,
+    "testEnvironment": "<rootDir>/test/mongo-test-environment",
+    "coverageReporters": [
+      "json",
+      "text-summary",
+      "lcov",
+      "clover"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**"
+    ],
+    "coveragePathIgnorePatterns": [
+      "test/*"
+    ],
+    "testRunner": "jest-circus/runner"
   }
 }
